# rag-training-example

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  run_in_cli.py
