[project]
name = "rag-training-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "pypdf>=6.0.0",
    "langchain-ollama>=0.3.7",
    "pdfminer-six>=20250506",
]
